# enoki

./: .gitignore  BUILD  BUILD.googleapi  Makefile  README.md  WORKSPACE  build.go  go.mod  go.sum
cmd/: BUILD.bazel  main.go
cmd/gateway/: main.go
cmd/server/: main.go
enoki/gateway/: gateway.go  healthz.go  main.go
enoki/server/: main.go
enoki/services/manifest/: manifest.go
internal/cmd/gateway/: main.go
internal/cmd/server/: main.go
internal/proto/: BUILD.bazel  asset.proto  error.proto
internal/proto/manifest/: BUILD.bazel  manifests.proto
internal/proto/manifests/v1/: manifests.pb.go  manifests.proto
internal/proto/storage/: BUILD.bazel  storage.proto
internal/servers/gateway/: BUILD.bazel  main.go
internal/servers/manifest/: BUILD.bazel  main.go
internal/servers/storage/: BUILD.bazel  main.go
internal/services/gateway/: BUILD.bazel  gateway.go
internal/services/manifest/: BUILD.bazel  manifest.go
internal/services/storage/: BUILD.bazel  assets.go  storage.go
internal/services/storage/db/: sqlc.yaml
internal/services/storage/db/sqlite/: BUILD.bazel  models.go  query.sql  query.sql.go  schema.sql
internal/shared/disk_manager/: BUILD.bazel  disk_manager.go
internal/shared/logging/: BUILD.bazel  logging.go
internal/shared/segmenter/: BUILD.bazel  segmenter.go
proto/manifests/v1/: manifests.pb.go  manifests.pb.gw.go  manifests.proto  manifests_grpc.pb.go
