load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/walkergriggs/enoki/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/servers/gateway",
        "//internal/servers/manifest",
        "//internal/servers/storage",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
