load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "manifest_proto",
    srcs = ["manifests.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@go_googleapis//google/api:annotations_proto"],
)

go_proto_library(
    name = "manifest_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
    ],
    importpath = "github.com/walkergriggs/enoki/internal/proto/manifest",
    proto = ":manifest_proto",
    visibility = ["//:__subpackages__"],
    deps = ["@go_googleapis//google/api:annotations_go_proto"],
)

go_library(
    name = "manifest",
    embed = [":manifest_go_proto"],
    importpath = "github.com/walkergriggs/enoki/internal/proto/manifest",
    visibility = ["//:__subpackages__"],
)
