load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "manifest",
    srcs = ["main.go"],
    importpath = "github.com/walkergriggs/enoki/internal/servers/manifest",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/proto/manifest",
        "//internal/services/manifest",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
