load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = ["main.go"],
    importpath = "github.com/walkergriggs/enoki/internal/servers/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/proto/storage:storage_go_proto",
        "//internal/services/storage",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
