load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "assets.go",
        "storage.go",
    ],
    importpath = "github.com/walkergriggs/enoki/internal/services/storage",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/proto:asset_go_proto",
        "//internal/proto/storage:storage_go_proto",
        "//internal/services/storage/db/sqlite",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)
